fixed overflow

--- a/servers/website/public/less/modal/index.less
+++ b/servers/website/public/less/modal/index.less
@@ -16,7 +16,8 @@
     width: 800px;
     
     .form {
-      .clearfix();
+      clear: both;
+      float: none;
       
       .view {
         width: 45%;
